# f

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  demo.yml
crates/f/: Cargo.toml
crates/f/src/: config.rs  display.rs  f.rs  git_status.rs
demo/: demo.tape  generate.sh
